# JJPlayer

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/llk/jjplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
jjplayer/: CMakeLists.txt
jjplayer/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVideoView.cpp  GLVideoView.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  Log.h  PlayerEGL.cpp  PlayerEGL.h  XData.cpp  XData.h  XThread.cpp  XThread.h  native-lib.cpp
jjplayer/src/main/cpp/bean/: XData.cpp  XData.h  XParameter.cpp  XParameter.h  XTexture.cpp  XTexture.h
jjplayer/src/main/cpp/interface/: IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IEGL.cpp  IEGL.h  IObserver.cpp  IObserver.h  IShader.cpp  IShader.h  ITexture.cpp  ITexture.h  IVideoView.cpp  IVideoView.h
jjplayer/src/main/cpp/utils/: Log.h
jjplayer/src/main/java/com/llk/jjplayer/: JJPlayer.kt  NativeUtils.kt
test/: CMakeLists.txt  build.gradle
test/src/main/cpp/: XLog.h  native-lib.cpp
test/src/main/java/com/llk/jjplayer/: JJPlayer.kt  NativeUtils.kt
